Полная реализации функции создания песни
